[project]
name = "url-shortener"
version = "0.1.0"
description = ""
authors = [
    {name = "romadev",email = "romacreator24@gmail.com"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111"
uvicorn = {extras = ["standard"], version = "^0.30"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0"}
asyncpg = "^0.29"
alembic = "^1.13"
python-jose = {extras = ["cryptography"], version = "^3.3"}
passlib = {extras = ["bcrypt"], version = "^1.7"}
pydantic = {extras = ["email"], version = "^2.7"}
pydantic-settings = "^2.3.4"
pytest-asyncio = "^0.23"
httpx = "^0.27"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
